--- a/.htaccess
+++ b/.htaccess
@@ -1,13 +1,17 @@
-<Files ~ "^.(htaccess|htpasswd)$">
-deny from all
-</Files>
-Options +MultiViews
+ErrorDocument 400 /error/400.html
+ErrorDocument 401 /error/401.html
+ErrorDocument 403 /error/403.html
+ErrorDocument 404 /error/404.html
+ErrorDocument 500 /error/500.html
+
 Options -Indexes
-ErrorDocument 400 /404.html
-RewriteEngine on
-RewriteCond %{HTTP_HOST} ^(www.cieldev.net)(:80)? [NC]
-RewriteRule ^(.*) https://cieldev.net/$1 [R=301,L]
-order deny,allow
+
+DirectoryIndex index.html
+
+RewriteEngine On
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME}\.html -f
+RewriteRule ^(.*)$ $1.html
 
 <IfModule mod_expires.c>
   ExpiresActive On
